--- a/package.json
+++ b/package.json
@@ -41,9 +41,10 @@
   },
   "devDependencies": {
     "@testing-library/react": "^9.5.0",
+    "babel-eslint": "^10.0.3",
     "cypress": "^3.7.0",
     "cypress-multi-reporters": "^1.4.0",
-    "eslint": "^7.2.0",
+    "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
