--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/user-event": "^7.1.2",
     "crypto-js": "^4.0.0",
-    "react": "^16.13.1",
+    "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
@@ -41,7 +41,6 @@
   },
   "devDependencies": {
     "@testing-library/react": "^9.5.0",
-    "babel-eslint": "^10.0.3",
     "cypress": "^3.7.0",
     "cypress-multi-reporters": "^1.4.0",
     "eslint": "^6.6.0",
