--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,8 @@
     "no-alert": "off",
     "prefer-arrow-callback": "off",
     "func-names": "off",
+    "react/jsx-props-no-spreading": "off",
+    "react/button-has-type": "off",
     "react/jsx-filename-extension": [
       1,
       {
